--- a/StayFinder.API/appsettings.json
+++ b/StayFinder.API/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "StayFinderDbConnectionString": "Server =LAPTOP-CUL43HSG\\MSSQLSERVER01;Database=StayFinderDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JwtSettings": {
+    "Issuer": "StayFinderAPI",
+    "Audience": "StayFinderAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "YourSuperSecretKey"
+  },
+
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
