Implement  Identity And Token Authentication

--- a/StayFinder.API/appsettings.json
+++ b/StayFinder.API/appsettings.json
@@ -6,8 +6,9 @@
     "Issuer": "StayFinderAPI",
     "Audience": "StayFinderAPIClient",
     "DurationInMinutes": 10,
-    "Key": "YourSuperSecretKey"
+    "Key": "YourSuperSecretKeyWithAtLeast256BitsOrMore"
   },
+
 
 
   "Serilog": {
